--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <!-- Own CSS -->
-    <link rel="stylesheet" href="/assets/css/base.css">
-    <link rel="stylesheet" href="/assets/css/layout.css">
-    <link rel="stylesheet" href="/assets/css/module.css">
-    <link rel="stylesheet" href="/assets/css/index.css">
-    <link rel="stylesheet" href="/assets/css/state.css">
+    <link rel="stylesheet" href="../assets/css/base.css">
+    <link rel="stylesheet" href="../assets/css/layout.css">
+    <link rel="stylesheet" href="../assets/css/module.css">
+    <link rel="stylesheet" href="../assets/css/index.css">
+    <link rel="stylesheet" href="../assets/css/state.css">
     <!-- CSS for JS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-    <link rel="stylesheet" href="/assets/css/library/modal-video.min.css">
+    <link rel="stylesheet" href="../assets/css/library/modal-video.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/css/lightslider.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.8.3/css/lightgallery.css">
     <!-- CSS Icons -->
@@ -78,7 +78,7 @@
             </div>
             <a href="#movie-available">
                 <div class="cover-film">
-                    <img class="img-cover-film" src="/assets/img/cover-film.png" alt="cover-film">
+                    <img class="img-cover-film" src="../assets/img/cover-film.png" alt="cover-film">
                 </div>
             </a>
         </div>
@@ -134,7 +134,7 @@
     <!-- Section 2 -->
     <section class="movie-about wrapper">
         <div class="movie__synopsis spacing-element">
-            <img class="img-synopsis" src="/assets/img/about-film.jpg" alt="about">
+            <img class="img-synopsis" src="../assets/img/about-film.jpg" alt="about">
             <div class="movie-about__content spacing-element">
                 <h2 class="content-header">About</h2>
                 <h3 class="content-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam elementum.</h3>
@@ -164,15 +164,15 @@
 
             </div>
             <button class="btn__read-more btn__cast">Read More</button>
-            <img class="img-cast" src="/assets/img/synopsy-film.jpg" alt="synopsis">
+            <img class="img-cast" src="../assets/img/synopsy-film.jpg" alt="synopsis">
         </div>
     </section>
     <!-- Section 3 -->
     <section class="movie-available wrapper wrapper--tablet" id="movie-available">
         <div class="available spacing-element">
             <h2 class="content-header available-header spacing-element">Available Now</h2>
-            <img class="cover-film--mobile" src="/assets/img/cover-film.png" alt="cover-film-mobile">
-            <img class="cover-film--tablet" src="/assets/img/cover-film-large.png" alt="cover-film-tablet">
+            <img class="cover-film--mobile" src="../assets/img/cover-film.png" alt="cover-film-mobile">
+            <img class="cover-film--tablet" src="../assets/img/cover-film-large.png" alt="cover-film-tablet">
         </div>
         <div class="platforms">
             <ul class="platforms__list">
@@ -195,7 +195,7 @@
                 <a class="video-link" data-video-id="jaY98VY5qwU" href="">
                     <div class="video-card">
                         <div class="video-card__content">
-                            <img src="/assets/img/video-thumb.jpg" alt="Thumb" class="video-card__thumb">
+                            <img src="../assets/img/video-thumb.jpg" alt="Thumb" class="video-card__thumb">
                             <div class="btn-playVideo"></div>
                         </div>
                     </div>
@@ -206,7 +206,7 @@
                 <a class="video-link" data-video-id="jaY98VY5qwU" href="">
                     <div class="video-card">
                         <div class="video-card__content">
-                            <img src="/assets/img/video-thumb.jpg" alt="" class="video-card__thumb">
+                            <img src="../assets/img/video-thumb.jpg" alt="" class="video-card__thumb">
                             <div class="btn-playVideo"></div>
                         </div>
                     </div>
@@ -217,7 +217,7 @@
                 <a class="video-link" data-video-id="jaY98VY5qwU" href="">
                     <div class="video-card">
                         <div class="video-card__content">
-                            <img src="/assets/img/video-thumb.jpg" alt="" class="video-card__thumb">
+                            <img src="../assets/img/video-thumb.jpg" alt="" class="video-card__thumb">
                             <div class="btn-playVideo"></div>
                         </div>
                     </div>
@@ -228,7 +228,7 @@
                 <a class="video-link" data-video-id="jaY98VY5qwU" href="">
                     <div class="video-card">
                         <div class="video-card__content">
-                            <img src="/assets/img/video-thumb.jpg" alt="" class="video-card__thumb">
+                            <img src="../assets/img/video-thumb.jpg" alt="" class="video-card__thumb">
                             <div class="btn-playVideo"></div>
                         </div>
                     </div>
@@ -239,7 +239,7 @@
                 <a class="video-link" data-video-id="jaY98VY5qwU" href="">
                     <div class="video-card">
                         <div class="video-card__content">
-                            <img src="/assets/img/video-thumb.jpg" alt="" class="video-card__thumb">
+                            <img src="../assets/img/video-thumb.jpg" alt="" class="video-card__thumb">
                             <div class="btn-playVideo"></div>
                         </div>
                     </div>
@@ -250,7 +250,7 @@
                 <a class="video-link" data-video-id="jaY98VY5qwU" href="/">
                     <div class="video-card">
                         <div class="video-card__content">
-                            <img src="/assets/img/video-thumb.jpg" alt="" class="video-card__thumb">
+                            <img src="../assets/img/video-thumb.jpg" alt="" class="video-card__thumb">
                             <div class="btn-playVideo"></div>
                         </div>
                     </div>
@@ -261,7 +261,7 @@
                 <a class="video-link" data-video-id="jaY98VY5qwU" href="">
                     <div class="video-card">
                         <div class="video-card__content">
-                            <img src="/assets/img/video-thumb.jpg" alt="" class="video-card__thumb">
+                            <img src="../assets/img/video-thumb.jpg" alt="" class="video-card__thumb">
                             <div class="btn-playVideo"></div>
                         </div>
                     </div>
@@ -272,7 +272,7 @@
                 <a class="video-link" data-video-id="jaY98VY5qwU" href="">
                     <div class="video-card">
                         <div class="video-card__content">
-                            <img src="/assets/img/video-thumb.jpg" alt="" class="video-card__thumb">
+                            <img src="../assets/img/video-thumb.jpg" alt="" class="video-card__thumb">
                             <div class="btn-playVideo"></div>
                         </div>
                     </div>
@@ -285,8 +285,8 @@
     <section class="movie-gallery wrapper">
         <h2 class="movie-videos__header">GALLERY</h2>
         <ul class="lightgallery">
-            <li class="lightgallery__item" data-src="/assets/img/gallery-1.jpg">
-                <img class="gallery-image" src="/assets/img/gallery1-poster.jpg" />
+            <li class="lightgallery__item" data-src="../assets/img/gallery-1.jpg">
+                <img class="gallery-image" src="../assets/img/gallery1-poster.jpg" />
                 <button class="icon-maximize">
                         <div class="maximize">
                           <i class="fas fa-arrow-left"></i>
@@ -294,8 +294,8 @@
                         </div>
                 </button>
             </li>
-            <li class="lightgallery__item" data-src="/assets/img/gallery-2.jpg">
-                <img class="gallery-image " src="/assets/img/gallery2-poster.jpg " />
+            <li class="lightgallery__item" data-src="../assets/img/gallery-2.jpg">
+                <img class="gallery-image " src="../assets/img/gallery2-poster.jpg " />
                 <button class="icon-maximize ">
                         <div class="maximize ">
                           <i class="fas fa-arrow-left "></i>
@@ -303,8 +303,8 @@
                         </div>
                 </button>
             </li>
-            <li class="lightgallery__item" data-src="/assets/img/gallery-3.jpg">
-                <img class="gallery-image " src="/assets/img/gallery3-poster.jpg " />
+            <li class="lightgallery__item" data-src="../assets/img/gallery-3.jpg">
+                <img class="gallery-image " src="../assets/img/gallery3-poster.jpg " />
                 <button class="icon-maximize ">
                         <div class="maximize ">
                           <i class="fas fa-arrow-left "></i>
@@ -312,8 +312,8 @@
                         </div>
                 </button>
             </li>
-            <li class="lightgallery__item" data-src="/assets/img/gallery-4.jpg">
-                <img class="gallery-image " src="/assets/img/gallery4-poster.jpg " />
+            <li class="lightgallery__item" data-src="../assets/img/gallery-4.jpg">
+                <img class="gallery-image " src="../assets/img/gallery4-poster.jpg " />
                 <button class="icon-maximize ">
                         <div class="maximize ">
                           <i class="fas fa-arrow-left "></i>
@@ -321,8 +321,8 @@
                         </div>
                 </button>
             </li>
-            <li class="lightgallery__item" data-src="/assets/img/gallery-5.jpg">
-                <img class="gallery-image " src="/assets/img/gallery5-poster.jpg " />
+            <li class="lightgallery__item" data-src="../assets/img/gallery-5.jpg">
+                <img class="gallery-image " src="../assets/img/gallery5-poster.jpg " />
                 <button class="icon-maximize ">
                         <div class="maximize ">
                           <i class="fas fa-arrow-left "></i>
@@ -330,8 +330,8 @@
                         </div>
                 </button>
             </li>
-            <li class="lightgallery__item" data-src="/assets/img/gallery-6.jpg">
-                <img class="gallery-image " src="/assets/img/gallery6-poster.jpg " />
+            <li class="lightgallery__item" data-src="../assets/img/gallery-6.jpg">
+                <img class="gallery-image " src="../assets/img/gallery6-poster.jpg " />
                 <button class="icon-maximize ">
                         <div class="maximize ">
                           <i class="fas fa-arrow-left "></i>
@@ -353,7 +353,7 @@
                 <a href="">
                     <div class="cover-movie">
                         <div class="cover-movie__content">
-                            <img src="/assets/img/cover-film.png" alt="Cover Movie" class="cover-movie__image">
+                            <img src="../assets/img/cover-film.png" alt="Cover Movie" class="cover-movie__image">
                         </div>
                         <h3 class="cover-movie__name">Name Movie</h3>
                     </div>
@@ -363,7 +363,7 @@
                 <a href="">
                     <div class="cover-movie">
                         <div class="cover-movie__content">
-                            <img src="/assets/img/cover-film.png" alt="Cover Movie" class="cover-movie__image">
+                            <img src="../assets/img/cover-film.png" alt="Cover Movie" class="cover-movie__image">
                         </div>
                         <h3 class="cover-movie__name">Name Movie</h3>
                     </div>
@@ -373,7 +373,7 @@
                 <a href="">
                     <div class="cover-movie">
                         <div class="cover-movie__content">
-                            <img src="/assets/img/cover-film.png" alt="Cover Movie" class="cover-movie__image">
+                            <img src="../assets/img/cover-film.png" alt="Cover Movie" class="cover-movie__image">
                         </div>
                         <h3 class="cover-movie__name">Name Movie</h3>
                     </div>
@@ -383,7 +383,7 @@
                 <a href="">
                     <div class="cover-movie">
                         <div class="cover-movie__content">
-                            <img src="/assets/img/cover-film.png" alt="Cover Movie" class="cover-movie__image">
+                            <img src="../assets/img/cover-film.png" alt="Cover Movie" class="cover-movie__image">
                         </div>
                         <h3 class="cover-movie__name">Name Movie</h3>
                     </div>
@@ -393,7 +393,7 @@
                 <a href="">
                     <div class="cover-movie">
                         <div class="cover-movie__content">
-                            <img src="/assets/img/cover-film.png" alt="Cover Movie" class="cover-movie__image">
+                            <img src="../assets/img/cover-film.png" alt="Cover Movie" class="cover-movie__image">
                         </div>
                         <h3 class="cover-movie__name">Name Movie</h3>
                     </div>
@@ -403,7 +403,7 @@
                 <a href="">
                     <div class="cover-movie">
                         <div class="cover-movie__content">
-                            <img src="/assets/img/cover-film.png" alt="Cover Movie" class="cover-movie__image">
+                            <img src="../assets/img/cover-film.png" alt="Cover Movie" class="cover-movie__image">
                         </div>
                         <h3 class="cover-movie__name">Name Movie</h3>
                     </div>
@@ -412,18 +412,18 @@
     </section>
 
     <script src="https://use.fontawesome.com/88b1fb54da.js"></script>
-    <script src="/assets/js/library/jquery-1.11.0.min.js"></script>
+    <script src="../assets/js/library/jquery-1.11.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-    <script src="/assets/js/library/jquery-modal-video.min.js"></script>
-    <script src="/assets/js/slide-videos.js"></script>
-    <script src="/assets/js/slide-otherMovies.js"></script>
+    <script src="../assets/js/library/jquery-modal-video.min.js"></script>
+    <script src="../assets/js/slide-videos.js"></script>
+    <script src="../assets/js/slide-otherMovies.js"></script>
     <script src="https://cdn.jsdelivr.net/picturefill/2.3.1/picturefill.min.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.6.14/js/lightgallery-all.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/js/lightslider.min.js"></script>
-    <script src="/assets/js/gallery-image.js"></script>
+    <script src="../assets/js/gallery-image.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
-    <script src="/assets/js/animation-gsap.js"></script>
+    <script src="../assets/js/animation-gsap.js"></script>
 
 </body>
 
